<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFAB00"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".registartion">


    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:contentDescription="@string/reg_img"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/reg"
        tools:srcCompat="@drawable/reg" />

    <TextView
        android:id="@+id/reg_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_img"

        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="0dp"
        android:text="@string/regText"
        android:textColor="#F41010"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/userNameIcon"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_below="@+id/reg_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="297dp"
        android:contentDescription="@string/user_icon"
        android:visibility="visible"
        app:srcCompat="@drawable/man"
        tools:srcCompat="@drawable/man" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_img"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="262dp"
        android:autofillHints=""
        android:fontFamily="monospace"
        android:hint="@string/user_name"
        android:inputType="text"
        android:text=""
        android:textColor="#8C0505"
        android:textColorHint="#132E43"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/userEmail"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_below="@+id/userNameIcon"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="295dp"
        android:contentDescription="@string/user_mail_icon"
        android:src="@drawable/email"
        android:visibility="visible"
        app:srcCompat="@drawable/email" />


    <EditText
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_img"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="150dp"
        android:autofillHints=""
        android:fontFamily="monospace"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:text=""
        android:textColor="#8C0505"
        android:textColorHint="#132E43"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/userEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="294dp"
        android:contentDescription="@string/password_icon"
        android:visibility="visible"
        app:srcCompat="@drawable/key" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_img"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="147dp"
        android:autofillHints=""
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:text=""
        android:textColor="#8C0505"
        android:textColorHint="#132E43"
        android:textSize="15sp" />

    <Button
        android:id="@+id/reg_link_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="#FA0A0A"
        android:text="Register" />


    <TextView
        android:id="@+id/reg_link"
        android:layout_width="204dp"
        android:layout_height="35dp"
        android:layout_below="@+id/reg_link_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="170dp"
        android:text="@string/sign_mess"
        android:textColor="#959898"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="245dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#121111"
        android:text="Login" />

</RelativeLayout>